[project]
name = "support-tooling"
version = "0.1.0"
requires-python = "~=3.10.0"
dependencies = [
    "kbcstorage",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "streamlit-aggrid>=1.1.9",
]

[tool.uv.sources]
kbcstorage = { git = "https://github.com/keboola/sapi-python-client.git" }
